# PackratParserGenerator

./: .gitignore  BuildInstructions.txt  Coverage.xml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: PackratParserGenerator.yml
GPG3venv/: pyvenv.cfg
GPG3venv/Scripts/: activate
Generated_Output/: core_parser.py  grammar_parser.py  parser.py  rules.py  test_generated_parser.py
Generated_Output2/: parser.py
Generated_Output3/: parser.py
packratparsergenerator/: __init__.py  cache.py  core.py  core_parser.py  grammar_parser.py  packratparsergenerator.py  rationalizer.py  rationalizer_old.py
packratparsergenerator/Generated_Output/: Cargo.toml  parser.py  parser.rs  rust_parser.py  rust_parser.rs
packratparsergenerator/grammar_compiler/: comment_maker.py  generate_own_parser.py  grammar_classes.py  grammar_compiler.py  grammar_compiler_new.py  parser_call_maker.py  testgrammartest.py
packratparsergenerator/parser/: Goal_Grammar.txt  Grammar.txt  Old_Grammar.txt  TestGrammar.txt  core_parser.py  grammar.py  grammar_parser.py  parser_pass_two.py  rationalizer.py  rules.py  rust_core_parser.rs
src/: Grammar.txt  core_parser.py  grammar_parser.py  rationalizer.py  utils.py
tests/: __init__.py  conftest.py  test_AND.py  test_NOT.py  test_ONE_OR_MORE.py  test_OPTIONAL.py  test_ORDERED_CHOICE.py  test_SEQUENCE.py  test_SUBEXPRESSION.py  test_TERMINAL.py  test_VAR_NAME.py  test_ZERO_OR_MORE.py  test_cache.py  test_direct_lrecursion.py  test_generated_parser.py  test_grammar.py  test_indirect_lrecursion.py
tests/test_core_parser/: test_and_predicate.py  test_not_predicate.py  test_one_or_more.py  test_optional.py  test_ordered_choice.py  test_sequence.py  test_subexpr.py  test_terminal.py  test_var_name.py  test_zero_or_more.py
(+23 files in other folders)
