[tool.poetry]
name = "PackratParserGenerator"
version = "0.1.0"
description = "A packrat PEG(Parsing Expression Grammar) parser generator"
authors = ["Tim Meiwald <tim.meiwald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
